# boswell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  autostart.sh  install.sh  meetings-CLAUDE.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
claude-commands/: summarize-1on1.md  summarize-generic.md  summarize-seminar.md  summarize-working-group.md
src/boswell/: __init__.py  __main__.py  cli.py  devices.py  doctor.py  menubar.py  notify.py  paths.py  recorder.py  transcribe.py  transcribe_worker.py
tests/: test_paths.py  test_recorder_smoke.py  test_transcribe.py  test_transcribe_pipeline.py
