[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boswell"
version = "0.1.0"
description = "Local meeting notetaker for macOS: capture + transcribe, summarize via interactive Claude Code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Rohan Dahale" }]
keywords = ["meeting", "transcription", "whisper", "macos", "claude"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sounddevice==0.4.7",
    "soundfile>=0.12,<0.14",
    "numpy>=1.26,<2.2",
    "mlx-whisper>=0.4,<0.5",
    "rumps==0.4.0",
    "pync==2.0.3",
]

[project.optional-dependencies]
fallback-whisper = ["pywhispercpp==1.3.3"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
boswell = "boswell.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
